--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <body>
           <!--img src = "king-->
           <h1><center><u>The African King</u></h1>
-          <h4>Birth of An Empire</h4>
+          <h4><u>Birth of An Empire</u></h4>
           <p>The story begins with the birth of boy that will change the fate of an entire continent. The 
           west side of the continent suffered long ethnic groups and religious battles before the reunion of 
           the 7 differents kingdom of west Africa.</p>
           <br/>
-          <h4>The Legacy</h4>
+          <h4><u>The Legacy</u></h4>
           <p>After the death of the king of the Mande Kingdom without a clear statement about his heir, the next 
    
       
