--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       
       
       <body>
-          <!--img src = "king-->
+          <img src = "king.jpg" alt = "king pic">
           <h1><center><u>The African King</u></h1>
           <h4><u>Birth of An Empire</u></h4>
           <p>The story begins with the birth of boy that will change the fate of an entire continent. The 
