--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
                   h4 { 
                         color:red;
                   }
-                      
+                  img {
+                        width:100%;
+                  }
+                  body
       
             </style>
       </head>
