--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                   img {
                         width:100%;
                   }
-                  body
+                  body {
+                        background-image; url("back.jpg")
+                  }
       
             </style>
       </head>
