--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       
       <body>
-          <img src = "king.jpg" alt = "king pic">
+          <!--img src = "king.jpg" alt = "king pic"-->
           <h1><center><u>The African King</u></h1>
           <h4><u>Birth of An Empire</u></h4>
           <div>
