--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         width:100%;
                   }
                   body {
-                        background-image; url("back.jpg")
+                        background-image; url("king.jpg")
                   }
       
             </style>
