--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         width:100%;
                   }
                   body {
-                        background-image: url("king.jpg");
+                        background-image: url("back.jpg");
                   }
       
             </style>
