--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                   body {
                         background-image: url("back.jpg");
                   }
+                  div {
+                        color:blue;
+                  }
       
             </style>
       </head>
