--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                   }
                   div {
                         color:pink;
+                        background-color:white;
                   }
       
             </style>
