--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                         background-image: url("back.jpg");
                   }
                   div {
-                        color:pink;
-                        background-color:white;
+                        color:orange;
+                        
                   }
       
             </style>
