--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         background-image: url("back.jpg");
                   }
                   div {
-                        color:orange;
+                        color:white;
                         
                   }
       
