--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <br><br>
           <img src = "king.jpg" alt = "king pic"/>
           <br>
-          <a href="http://https://en.wikipedia.org/wiki/Mandinka_people"
+          <a href="http://en.wikipedia.org/wiki/Mandinka_people"
            target=_blank>For Mandinka People Origin<a/>
                 
       
