--- a/index.html
+++ b/index.html
@@ -34,15 +34,31 @@
           <h1><center><u>The African King</u></h1>
           <h4><u>Birth of An Empire</u></h4>
           <div>
-          <p>The story begins with the birth of boy that will change the fate of an entire continent.</p>
-          <p>The west side of the continent suffered long ethnic groups and religious battles before the reunion of 
-          the 7 differents kingdom of west Africa.</p>
+          <p>Sundiata was crippled from childhood and his mother (Sogolon) was the subject of ridicule
+             among her co-wives. She was constantly teased and ridiculed openly for her son's disability. 
+             This significantly affected Sundiata and he was determined to do everything he possibly could 
+             in order to walk like his peers. Through this determination, he one day miraculously got up and walked. 
+             Among his peers, he became a leader. His paternal half-brother, Dankaran Touman, and Dankaran's mother, Sassouma Bereté,
+             were cruel and resentful of Sundiata and his mother. Their cruelty escalated after the death of Naré Maghann (the king and father of Sundiata). 
+             To escape persecution and threats on her son's life, Sogolon took her children, Sundiata and his sisters, into exile. 
+             This exile lasted for many years and took them to different countries within the Ghana Empire and eventually to Mema, 
+             where the king of Mema granted them asylum. Sundiata was admired by the King of Mema for his courage and tenacity. 
+             As such, he was given a senior position within the kingdom. When King Soumaoro Kanté of Sosso conquered the Mandinka people, 
+             messengers were sent to go and look for Sogolon and her children, as Sundiata was destined to be a great leader according to prophecy. 
+             Upon finding him in Mema, they persuaded him to come back in order to liberate the Mandinkas and their homeland. 
+             On his return, he was accompanied by an army given to him by the King of Mema.</p>
           </div>
           <br/>
           <h4><u>The Legacy</u></h4>
           <div>
-          <p>After the death of the king of the Mande Kingdom without a clear statement about his heir, the battle for the throne
-           of the Manding empire was around.</p>
+          <p>It was during his reign that Mali first began to become an economic power, 
+             a trend continued by his successors an improved on thanks to the ground work 
+             set by Sundiata, who controlled the region's trade routes and gold fields. 
+             The social and political constitution of Mali were first being codified during
+             the reign of Mansa Sundiata Keita. Known as the Gbara and the Kouroukan Fouga, 
+             although not written and even subject to alterations in retelling and when they 
+             were first recorded in written form, they were part of the social and political 
+             norms of Mali. Many of these laws have been incorporated into the constitution of modern-day Mali.</p>
           </div>
           <br><br>
           <img src = "king.jpg" alt = "king pic"/>
