--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
              As such, he was given a senior position within the kingdom. When King Soumaoro Kanté of Sosso conquered the Mandinka people, 
              messengers were sent to go and look for Sogolon and her children, as Sundiata was destined to be a great leader according to prophecy. 
              Upon finding him in Mema, they persuaded him to come back in order to liberate the Mandinkas and their homeland. 
-             On his return, he was accompanied by an army given to him by the King of Mema.</p>
+             On his return, he was accompanied by an army given to him by the King of Mema. 
+             It was on the plain of Siby where they formed a pact brotherhood in order to liberate their country and people from the powerful Sosso king.
+             At The Battle of Kirina, Sundiata and his allies defeated the Sosso king, and he became the first Emperor of the Mali Empire. 
+             He was the first of the Mandinka line of kings to adopt the royal title Mansa (king or emperor in the Mandinka language).</p>
           </div>
           <br/>
           <h4><u>The Legacy</u></h4>
@@ -58,7 +61,14 @@
              the reign of Mansa Sundiata Keita. Known as the Gbara and the Kouroukan Fouga, 
              although not written and even subject to alterations in retelling and when they 
              were first recorded in written form, they were part of the social and political 
-             norms of Mali. Many of these laws have been incorporated into the constitution of modern-day Mali.</p>
+             norms of Mali. Many of these laws have been incorporated into the constitution of modern-day Mali.
+             Sundiata Keita was not merely a conqueror who was able to rule over a large empire with different tribes and languages, 
+             but also developed Mali's mechanisms for agriculture, and is reported to have introduced cotton and weaving in Mali.
+             Towards the end of his reign, "absolute security" is reported to have "prevailed throughout his dominion.</p>
+             <p>From a global perspective, the Epic of Sundiata and the Mali Empire is taught in many schools, colleges and universities, 
+             not just in West Africa but in many parts of the World.
+             Some scholars such as Ellen Snodgrass, and others have observed similarities with the 13th-century Epic of Sundiata to Walt Disney's 
+             1994 animated film The Lion King.[60] Disney has maintained that the film was inspired by William Shakespeare's Hamlet.</p>
           </div>
           <br><br>
           <img src = "king.jpg" alt = "king pic"/>
