--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
            
             <style>
                   h1 {
-                        color:blue;
+                        color:purple;
                   }
       
                   h4 { 
