--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
              <li><a href="#home">Home</a></li>
              <li><a href="#about">About</a></li>
              <li><a href="#portofolio">Portofolio</a></li>
-             <li style="float:right"><a class="active" href="#contact">Contact</a></li>
+             <li style="float:right"><a href="#contact">Contact</a></li>
           </ul>
             
           <!--img src = "king.jpg" alt = "king pic"-->
