--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       
       <body>
           <ul>
-             <li><a href="#home">Home</a></li>
+             <li><a class="active" href="#home">Home</a></li>
              <li><a href="#about">About</a></li>
              <li><a href="#portofolio">Portofolio</a></li>
              <li style="float:right"><a href="#contact">Contact</a></li>
