--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                         margin: 0;
                         padding: 0;
                         overflow: hidden;
-                        background-color: LightGray;
+                        background-color: black;
                         position: fixed;
                         top: 0;
                         width:100;
