--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <body>
           <ul>
              <li><a class="active" href="#home">Home</a></li>
+                <p>je suis la</p>
              <li><a href="#about">About</a></li>
              <li><a href="#portofolio">Portofolio</a></li>
              <li style="float:right"><a href="#contact">Contact</a></li>
