--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
                 
           <div class="gallery">
   <a target="_blank" href="p1.jpg">
-    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+    <img src="p1.jpg" alt="map" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">empire map</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="p3.jpg">
-    <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <img src="p3.jpg" alt="Masjid" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Kingdom Old Masjid</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="p4.jpg">
-    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <img src="p4.jpg" alt="Pilgrimage" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Pilgrimage to Mecca</div>
 </div>
 
 
