--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
 
 <div class="gallery">
   <a target="_blank" href="p3.jpg">
-    <img src="p3.jpg" alt="Masjid" width="600" height="400">
+    <img src="p3.jpg" alt="Pilgrimage" width="600" height="400">
   </a>
-  <div class="desc">Kingdom Old Masjid</div>
+  <div class="desc">Pilgrimage Summary and Economical Impact</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="p4.jpg">
-    <img src="p4.jpg" alt="Pilgrimage" width="600" height="400">
+    <img src="p4.jpg" alt="Masjid" width="600" height="400">
   </a>
-  <div class="desc">Pilgrimage to Mecca</div>
+  <div class="desc">Kingdom Old Masjid</div>
 </div>
 
 
