--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
   
                   div.gallery {
                         margin: 5px;
-                        border: 1px solid #ccc;
+                        border: 1px solid white;
                         float: left;
                         width: 180px;
                   }
 
                   div.gallery:hover {
-                        border: 1px solid #777;
+                        border: 1px solid white;
                   }
 
                   div.gallery img {
@@ -59,7 +59,7 @@
                         height: auto;
                   }
 
-                  .desc {
+                  div.desc {
                         padding: 15px;
                         text-align: center;
                    }
