--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                    }
                   
                   h1 {
-                        color:purple;
+                        color:indigo;
                   }
       
                   h2 { 
-                        color:white;
+                        color:khaki;
                   }
                   img {
                         width:100%;
