--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                   li {
                         float: left;
-                        border-right: 1px solid black;
+                        border-right: 1px solid white;
                   }
                   
                   li:last-child {
