--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         background-image: url("bck2.jpg");
                   }
                   div {
-                        color:teal;
+                        color:SlateGray;
                         
                   }
       
