--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                    }
                   
                   h1 {
-                        color:BlueViolet;
+                        color:LightSeaGreen;
                   }
       
                   h2 { 
