--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         width:100%;
                   }
                   body {
-                        background-image: url("new.jpg");
+                        background-image: url("bck2.jpg");
                   }
                   div {
                         color:#FAFAD2;
