--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="text-white-75 mb-4">Tantalum is used under differents forms according to the industry:
+			   <ul class="text-white-75 mb-4">
+			      <li>Tantalum Powder: Mainly used in electronic circuits and capacitors. it's the main component in medical devices and automotive parts.</li>
+			      <li>Tantalum Plate: Very strong corrosion resistance, second to gold and platinum. it's mainly used in chemical reaction equipment such as the coating of reactor, valves, heat exchangers, protection systems and water tanks.</li>
+			      <li>Tantalum Wire: Generally used in the medical field. It can be used as the main material for repairing joints and bones. It can also be used as suture clip and vascular stent in medical devices.</li>
+			      <li>Tantalum Rod: Raw material from which tantalum wire is made. It can also be used to produce tantalum crucible, which is mainly used in high temperature furnace, in crystal, rare earth and metallurgical industry.</li>
+			      <li>Tantalum in Alloy: Researches have shown that the addition of tantalum can greatly increase the strength of the alloy. However, currently it is only limited to research stage with few applications.</li>
+                        </ul></p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
