--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="text-white-75 mb-5">Nowadays technology is big part of daily lives in terms of communications, electronics and transportation. Innovation and creation
 				of new electronics devices, use of energy efficient cars would be impossible without the use of a mineral called Tantulum which is extracted from the ore Coltan.
 				Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after the Greek mythology figure Tantalus. it has excellent chemical properties 
-				and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, steel, chemical, carbide, atomic energy, superconducting tech, 
+				and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, steel, chemical, carbide, atomic energy, superconducting technology, 
 				automotive electronics, aerospace and medical industry.</p>
 			    
 						
