--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-			    <h2 class="text-white font-weight-bold"><b>Blood In Our Cars And Phones</b></h2>
+			    <h2 class="text-white font-weight-bold"><i><b>Blood In Our Electronic Devices</b></i></h2>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Nowadays technology is big part of daily lives in terms of communications, electronics and transportation. Innovation and creation
-				of new electronics devices, use of energy efficient cars would be impossible without the use of a mineral called Tantulum which is extracted from the ore Coltan.
-				Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after the Greek mythology figure Tantalus. it has excellent chemical properties 
-				and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, steel, chemical, carbide, atomic energy, superconducting technology, 
-				automotive electronics, aerospace and medical industry.</p>
+				of new electronics devices, use of energy efficient cars would be impossible without the use of a mineral called Tantalum which is extracted from the ore Coltan.
+				Coltan is mined by hand in the Democratic Republic Of Congo in central Africa. Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after 
+				the Greek mythology figure Tantalus. it has excellent chemical properties and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, 
+				steel, chemical, carbide, atomic energy, superconducting technology, automotive electronics, aerospace and medical industry.</p>
 			    
 						
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
@@ -60,7 +60,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-			    <h3 class="text-white mt-0"><b>Different Form Of Tantalum.</b></h3>
+			    <h3 class="text-white mt-0"><i><b>Different Form Of Tantalum.</b></i></h3>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Tantalum is used under differents forms according to the industry:
 			   <ul class="text-white-75 mb-4">
