--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 				of new electronics devices, use of energy efficient cars would be impossible without the use of a mineral called Tantalum which is extracted from the ore Coltan.
 				Coltan is mined by hand in the Democratic Republic Of Congo in central Africa. Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after 
 				the Greek mythology figure Tantalus. it has excellent chemical properties and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, 
-				steel, chemical, carbide, atomic energy, superconducting technology, automotive electronics, aerospace and medical industry.</p>
+				steel, chemical, carbide, atomic energy, superconducting technology, automotive electronics, aerospace and medical industry. However, the exploitation of coltan has 
+				serious impact on the environment with the exposure to toxic chemical, the destruction of the natural habitat of certain animals species and it is often associated with 
+				human rights violations such as child labor and a systematic exploitation of the population by governments and rebel groups.</p>
 			    
 						
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
