--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Tantalum is used under differents forms according to the industry:
 			   <ul class="text-white-75 mb-4">
-			      <li>Tantalum Powder: Mainly used in electronic circuits and capacitors. it's the main component in medical devices and automotive parts.</li>
+			      <li>Tantalum Powder: Mainly used in electronic circuits and capacitors. it's the main component in medical devices and automotive parts but also found in laptops, mobile phones, flat-panel TVs, gaming consoles and battery chargers.</li>
 			      <li>Tantalum Plate: Very strong corrosion resistance, second to gold and platinum. it's mainly used in chemical reaction equipment such as the coating of reactor, valves, heat exchangers, protection systems and water tanks.</li>
 			      <li>Tantalum Wire: Generally used in the medical field. It can be used as the main material for repairing joints and bones. It can also be used as suture clip and vascular stent in medical devices.</li>
 			      <li>Tantalum Rod: Raw material from which tantalum wire is made. It can also be used to produce tantalum crucible, which is mainly used in high temperature furnace, in crystal, rare earth and metallurgical industry.</li>
