--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				human rights violations such as child labor and a systematic exploitation of the population by governments and rebel groups.</p>
 			    
 						
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <!--a class="btn btn-primary btn-xl" href="#about">Find Out More</a-->
                     </div>
                 </div>
             </div>
