--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Nowadays technology is big part of daily lives in terms of communications, electronics and transportation. Innovation and creation
 				of new electronics devices, use of energy efficient cars would be impossible without the use of a mineral called Tantalum which is extracted from the ore Coltan.
-				Coltan is mined by hand in the Democratic Republic Of Congo in central Africa. Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after 
+				Coltan is mined by hand in the Democratic Republic Of Congo in central Africa, one of the main world's producer. Tantalum was discovered by Swedish chemist A.G Ekeberg in 1802 and was named after 
 				the Greek mythology figure Tantalus. it has excellent chemical properties and very high corrosion resistance which is why it is widely used in electronics, mettalurgy, 
 				steel, chemical, carbide, atomic energy, superconducting technology, automotive electronics, aerospace and medical industry. However, the exploitation of coltan has 
 				serious impact on the environment with the exposure to toxic chemical, the destruction of the natural habitat of certain animals species and it is often associated with 
