--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container px-4 px-lg-5 h-100">
+            <!--div class="container px-4 px-lg-5 h-100"-->
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
 			    <h2 class="text-white font-weight-bold"><i><b>Blood In Our Electronic Devices</b></i></h2>
@@ -55,11 +55,11 @@
                         <!--a class="btn btn-primary btn-xl" href="#about">Find Out More</a-->
                     </div>
                 </div>
-            </div>
+            <!--/div-->
         </header>
         <!-- About-->
         <section class="page-section bg-primary" id="about">
-            <div class="container px-4 px-lg-5">
+            <!--div class="container px-4 px-lg-5"-->
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
 			    <h3 class="text-white mt-0"><i><b>Different Form Of Tantalum.</b></i></h3>
@@ -72,10 +72,10 @@
 			      <li>Tantalum Rod: Raw material from which tantalum wire is made. It can also be used to produce tantalum crucible, which is mainly used in high temperature furnace, in crystal, rare earth and metallurgical industry.</li>
 			      <li>Tantalum in Alloy: Researches have shown that the addition of tantalum can greatly increase the strength of the alloy. However, currently it is only limited to research stage with few applications.</li>
                         </ul></p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <!--a class="btn btn-light btn-xl" href="#services">Get Started!</a-->
                     </div>
                 </div>
-            </div>
+            <!--/div-->
         </section>
         <!-- Services-->
         <section class="page-section" id="services">
@@ -86,15 +86,18 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
+                            <h3 class="h4 mb-2">Find Out More</h3>
+			    <a href="https://www.abc.net.au/news/2020-03-01/tech-companies-rely-child-labour-abuse-to-mine-coltan-in-congo/11855258?utm_campaign=abc_news_web&utm_content=link&utm_medium=content_shared&utm_source=abc_news_web"
+			    Target=_blank>Child Labor<a/>	
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <h3 class="h4 mb-2">Coltan Controversial</h3>
+                            <iframe width="1000" height="500" src="https://www.youtube.com/embed/F5VZtJDYWNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <!--p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p-->
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -107,7 +110,9 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
+                            <h3 class="h4 mb-2">Get Involve</h3>
+			    <a href="https://gorillas.org/gorilla-organizations-ian-redmond-returns-congos-coltan-mines-daily-mirror-investigators/"
+			    Target=_blank>Gorilla Organization<a/>
                             <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
                         </div>
                     </div>
