--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h3 class="h4 mb-2">Find Out More</h3>
 			    <a href="https://www.abc.net.au/news/2020-03-01/tech-companies-rely-child-labour-abuse-to-mine-coltan-in-congo/11855258?utm_campaign=abc_news_web&utm_content=link&utm_medium=content_shared&utm_source=abc_news_web"
 			    Target=_blank>Child Labor<a/>	
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <!--p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p-->
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -113,7 +113,7 @@
                             <h3 class="h4 mb-2">Get Involve</h3>
 			    <a href="https://gorillas.org/gorilla-organizations-ian-redmond-returns-congos-coltan-mines-daily-mirror-investigators/"
 			    Target=_blank>Gorilla Organization<a/>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <!--p class="text-muted mb-0">Is it really open source if it's not made with love?</p-->
                         </div>
                     </div>
                 </div>
