--- a/index.html
+++ b/index.html
@@ -124,29 +124,29 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/c1-1.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/c1-1.jpg" title="Coltan Natural Form">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/c1-1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Coltan</div>
+                                <div class="project-name">Natural Form</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/c2-2.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/c2-2.jpg" title="Work Conditions">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/c2-2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Labor</div>
+                                <div class="project-name">Work Conditions</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/capacitors.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/capacitors.jpg" title="Tantalum Capacitors">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/capacitors.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Electronic Circuit</div>
+                                <div class="project-name">Tantalum Capacitors</div>
                             </div>
                         </a>
                     </div>
