--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--div class="container px-4 px-lg-5 h-100"-->
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-			    <h2 class="text-white font-weight-bold"><i><b>Blood In Our Electronic Devices</b></i></h2>
+			    <h2 class="text-white font-weight-bold"><i><b>Technology and children labor</b></i></h2>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
