--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Coltan Controversial</h3>
-                            <iframe width="1000" height="500" src="https://www.youtube.com/embed/F5VZtJDYWNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <!--iframe width="1000" height="500" src="https://www.youtube.com/embed/F5VZtJDYWNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe-->
 			    <!--p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p-->
                         </div>
                     </div>
