--- a/index.html
+++ b/index.html
@@ -151,29 +151,29 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/lamp.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/lamp.jpg" title="Tantalum Filament Lamp">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lamp.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">National Museum Of American History</div>
+                                <div class="project-name">Siemens & Halske Tantalum Filament Lamp</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/ring.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/ring.jpg" title="Tantalum Wedding Band">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/ring.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Jewelry</div>
+                                <div class="project-name">Tantalum Wedding Band</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/smartphone.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/smartphone.jpg" title="Smartphones">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/smartphone.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Phones</div>
+                                <div class="project-name">Tantalum Capacitors In SmartPhone</div>
                             </div>
                         </a>
                     </div>
