--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 			      <li>Tantalum Rod: Raw material from which tantalum wire is made. It can also be used to produce tantalum crucible, which is mainly used in high temperature furnace, in crystal, rare earth and metallurgical industry.</li>
 			      <li>Tantalum in Alloy: Researches have shown that the addition of tantalum can greatly increase the strength of the alloy. However, currently it is only limited to research stage with few applications.</li>
                         </ul></p>
-                        <!--a class="btn btn-light btn-xl" href="#services">Get Started!</a-->
+                        <a class="btn btn-light btn-xl" href="#services">href="https://www.rsc.org/periodic-table/element/73/tantalum"
+			    Target=_blank>Find Out More<a/>
                     </div>
                 </div>
             <!--/div-->
